ar(feat) [DPTM-11]: Add Sentry to Hypnos; ar(fix): [DPCP-123]: Load Services in First Sign-up (#56)
* ar(feat) [DPTM-7]: Add Sentry to Hypnos

* ar(feat) [DPTM-7]: Add Sentry to Hypnos

* ar(feat) [DPTM-7]: Add Sentry to Hypnos

* ar(feat) [DPTM-7]: Add Sentry to Hypnos

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@prisma/extension-accelerate": "1.1.0",
     "@prisma/nextjs-monorepo-workaround-plugin": "5.18.0",
     "@types/json-schema": "7.0.15",
+    "@types/lodash": "^4.17.7",
     "@types/node": "20",
     "@types/react": "18.3.2",
     "@types/uuid": "9.0.8",
@@ -73,7 +74,7 @@
     "eslint-config-alloy": "5.1.2",
     "eslint-config-next": "14.0.4",
     "husky": "9.0.11",
-    "lodash": "4.17.21",
+    "lodash": "^4.17.21",
     "mongodb": "5.0.0",
     "next-auth": "5.0.0-beta.20",
     "nodemailer": "6.9.14",
