--- a/.github/workflows/deploy_vultr_dev.yaml
+++ b/.github/workflows/deploy_vultr_dev.yaml
@@ -1,4 +1,4 @@
-name: hypnos::deploy_gcp_prod
+name: hypnos::deploy_vultr
 
 on:
   push:
@@ -28,23 +28,23 @@ jobs:
       id-token: write
 
     steps:
-      - name: hypnos::deploy_prod::docker::Checkout repository
+      - name: hypnos::deploy_vultr::docker::Checkout repository
         uses: actions/checkout@v4
       
-      - name: hypnos::deploy_prod::docker::Log in to the Container registry
+      - name: hypnos::deploy_vultr::docker::Log in to the Container registry
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       
-      - name: hypnos::deploy_prod::docker::Extract metadata (tags, labels) for Docker
+      - name: hypnos::deploy_vultr::docker::Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
-      - name: hypnos::deploy_prod::docker::Build and push Docker image
+      - name: hypnos::deploy_vultr::docker::Build and push Docker image
         id: push
         uses: docker/build-push-action@v6
         with:
@@ -53,7 +53,7 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
-            API_URL=${{ secrets.API_URL_PROD }}
+            API_URL=${{ secrets.API_URL_VULTR }}
             APPLE_CLIENT_ID=${{ secrets.APPLE_CLIENT_ID_PROD }}
             APPLE_CLIENT_SECRET=${{ secrets.APPLE_CLIENT_SECRET_PROD }}
             AUTH_SECRET=${{ secrets.AUTH_SECRET_PROD }}
@@ -93,25 +93,25 @@ jobs:
             VERCEL_GIT_COMMIT_SHA=${{ github.sha }}
 
        
-      - name: hypnos::deploy_prod::docker::Generate artifact attestation
+      - name: hypnos::deploy_vultr::docker::Generate artifact attestation
         uses: actions/attest-build-provenance@v1
         with:
           subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           subject-digest: ${{ steps.push.outputs.digest }}
           push-to-registry: true
   
-  deploy-to-gcp-vm:
+  deploy-to-vultr-vm:
     needs: build-and-push-image
-    name: hypnos::deploy_prod::push_to_gcp::vm
+    name: hypnos::deploy_vultr::push_to_gcp::vm
     runs-on: ubuntu-latest
 
     steps:
-      - name: hypnos::deploy_prod::push_to_gcp::vm::install ssh keys
+      - name: hypnos::deploy_vultr::push_to_vultr::vm::install ssh keys
         run: |
           install -m 600 -D /dev/null ~/.ssh/id_rsa
-          echo "${{ secrets.SSH_PRIVATE_KEY_PROD }}" > ~/.ssh/id_rsa
-          ssh-keyscan -H ${{ secrets.SSH_HOST_PROD }} > ~/.ssh/known_hosts
-      - name: hypnos::deploy_prod::push_to_gcp::vm::connect and pull
-        run: ssh ${{ secrets.SSH_USER_PROD }}@${{ secrets.SSH_HOST_PROD }} "docker login ghcr.io -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASSWORD }} && docker pull ${{ secrets.IMAGE_TAG_PROD }} && docker stop hypnos && docker rm hypnos && docker run -d --name hypnos --restart unless-stopped -p ${{ secrets.IMAGE_PORT_PROD }}:3001 ${{ secrets.IMAGE_TAG_PROD }} && exit"
+          echo "${{ secrets.SSH_VULTR_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.SSH_VULTR_HOST }} > ~/.ssh/known_hosts
+      - name: hypnos::deploy_vultr::push_to_gcp::vm::connect and pull
+        run: ssh ${{ secrets.SSH_VULTR_USER }}@${{ secrets.SSH_VULTR_HOST }} "docker login ghcr.io -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASSWORD }} && docker pull ${{ secrets.IMAGE_TAG_PROD }} && docker stop hypnos && docker rm hypnos && docker run -d --name hypnos --restart unless-stopped -p ${{ secrets.IMAGE_PORT_PROD }}:3001 ${{ secrets.IMAGE_TAG_PROD }} && exit"
       - name: cleanup
         run: rm -rf ~/.ssh
